--- a/config/application.yml
+++ b/config/application.yml
@@ -1,7 +1,7 @@
 development:
   FACEBOOK_CONSUMER_KEY: 1486804751548096
   FACEBOOK_CONSUMER_SECRET: 5b299e3487d3ba2b467de0c7e2cef4c3
-  TWITTER_CONSUMER_KEY: YOUR_TWITTER_KEY
-  TWITTER_CONSUMER_SECRET: YOUR_TWITTER_SECRET
+  TWITTER_CONSUMER_KEY: A3Xx9GwlRMu98B2x5NeeW8bTD
+  TWITTER_CONSUMER_SECRET: 6x08Fjer5ZzGXyF3eSVPlba03aMtWKiYmsUOf2u39NxyckdOWq
   GITHUB_CONSUMER_KEY: YOUR_GITHUB_KEY
   GITHUB_CONSUMER_SECRET: YOUR_GITHUB_SECRET
