add hatena support

--- a/config/application.yml
+++ b/config/application.yml
@@ -5,3 +5,6 @@ development:
   TWITTER_CONSUMER_SECRET: 6x08Fjer5ZzGXyF3eSVPlba03aMtWKiYmsUOf2u39NxyckdOWq
   GITHUB_CONSUMER_KEY: 2b38b221b641027da949
   GITHUB_CONSUMER_SECRET: ea1bc262681bcc64e28cfbfb3760800a4f089db2
+  HATENA_CONSUMER_KEY: Cjoie59SjBoTPw==
+  HATENA_CONSUMER_SECRET: 31fNi/vFrIrDW2KEVSKnaGEr4OQ=
+
